--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -724,12 +724,15 @@
   ENG_Libs_Not_Support_Government:0 "The £ENG_Whigs  §YWhigs§! do not §Rsupport§! us"
 
   ENG_ModWUP_Support_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! §Gsupport§! us"
+  ENG_ModWUP_Neutral_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! are §Yneutral§! toward us"
   ENG_ModWUP_Not_Support_Government:0 "The £ENG_WUP  §rWorker's Union Moderates§! do not §Rsupport§! us"
 
   ENG_HardWUP_Support_Government:0 "The  £ENG_Jacobins   §RWorker's Union Hardliners§! §Gsupport§! us"
+  ENG_HardWUP_Neutral_Government:0 "The  £ENG_Jacobins   §RWorker's Union Hardliners§! are §Yneutral§! toward us"
   ENG_HardWUP_Not_Support_Government:0 "The £ENG_Jacobins  §RWorker's Union Hardliners§! do not §Rsupport§! us"
 
   ENG_NPP_Support_Government:0 "The £ENG_NPP  §PNational People's Party§! §Gsupport§! us"
+  ENG_NPP_Neutral_Government:0 "The £ENG_NPP  §PNational People's Party§! are §Yneutral§! toward us"
   ENG_NPP_Not_Support_Government:0 "The £ENG_NPP   §PNational People's Party§! do not §Rsupport§! us"
 
   PB_ENG_Parliament_Completing_Decision:0 "The Government is §Rnot§! currently completing any other parliamentary decisions\n"
@@ -756,11 +759,20 @@
   # IMPERIAL MANAGEMENT SYSTEM
   ######################################
   PB_ENG_Imperial_Management:0 "The Imperial Confederation"
-  PB_ENG_Imperial_Management_desc:0 "\n\n\n\n\n\nThe modern Imperial Confederation is the product of more than a century of reforms, regressions and compromises keeping the British Empire together. Initially formed following the Acts of Autonomy that created the United Dominions, the Confederation has gradually expanded to transform the Empire into a supernational alliance of nations united beneath the British crown.\n\nWith the seat of the Imperial Parliament in London, Great Britain is able to manage many of the Confederation's economic and research affairs, including where and how to manage budgetary resources."
+  PB_ENG_Imperial_Management_desc:0 "\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nThe current outlook of Imperial Reform is [get_reform_outlook]\n\nThe modern Imperial Confederation is the product of more than a century of reforms, regressions and compromises keeping the British Empire together. Initially formed following the Acts of Autonomy that created the United Dominions, the Confederation has gradually expanded to transform the Empire into a supernational alliance of nations united beneath the British crown.\n\nWith the seat of the Imperial Parliament in London, Great Britain is able to manage many of the Confederation's economic and research affairs, including where and how to manage budgetary resources."
   ENG_Develop_Commonwealth:0 "Development in [From.GetName]"
   ENG_Develop_Commonwealth_Science:0 "Assist Research in [From.GetName]"
   PB_ENG_Empire_Is_Completing_Imperial_Action:0 "§YThe Government is§! §Rnot§! §Ycurrently completing any other Imperial Management decisions§!\n"
   PB_ENG_Empire_Imperial_Action_Timeout_TT:0 "§YThe Government has§! §Rnot§! §Ycompleted any other Imperial Management decisions within the last 90 days§!\n"
+
+  PB_ENG_Reform_Outlook_Neutral:0 "§YNeutral§!"
+  PB_ENG_Reform_Outlook_Moderate_Reform:0 "§rModerately Reformist§!"
+  PB_ENG_Reform_Outlook_Strong_Reform:0 "§RStrongly Reformist§!"
+  PB_ENG_Reform_Outlook_Moderate_Conservative:0 "§bModerately Conservative§!"
+  PB_ENG_Reform_Outlook_Strong_Conservative:0 "§BStrongly Conservative§!"
+
+  PB_ENG_Increase_Imperial_Reformism_tt:0 "£Generic_Red_Arrow Imperial Reform Outlook will become more §rreformist§!"
+  PB_ENG_Increase_Imperial_Conservatism_tt:0 "£Generic_Blue_Arrow Imperial Reform Outlook will become more §bconservative§!"
 
   ##########################
   # EVENTS
