--- a/localisation/PB_Generic_Decisions_l_english.yml
+++ b/localisation/PB_Generic_Decisions_l_english.yml
@@ -33,6 +33,9 @@
   decision_cost_500_infequip:0 "£rifle_texticon §Y500§!"
   decision_cost_500_infequip_blocked:0 "£rifle_texticon §Y500§!"
 
+  decision_cost_2000_infequip:0 "£rifle_texticon §Y2000§!"
+  decision_cost_2000_infequip_blocked:0 "£rifle_texticon §Y2000§!"
+
   PB_Small_Modernization_Increase:0 "Our Military Modernization will §GIncrease!§! by 5%"
   PB_Moderate_Modernization_Increase:0 "Our Military Modernization will §GIncrease!§! by 10%"
   PB_Large_Modernization_Increase:0 "Our Military Modernization will §GIncrease!§! by 15%"
