--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -24,15 +24,15 @@
   PBNews.6.d:0 "The Chinese Civil War has come to an end. Republican forces have been routed and defeated after the fall of their provisional capital in Dali. The Imperial forces have achieved victory, but at an incredible cost. China has been decimated by the conflict, with millions of civilian casualties. Famine, disease and banditry run rampant as the Imperial authorities take stock of their phyrric victory.\n\nDespite this, it remains to be seen if the formerly moribund Qing Empire will be able to weather reconstruction intact."
   PBNews.6.a:0 "Perhaps the Qing aren't doomed?"
 
-  PBNews.7.t:0 "CHINESE EMPIRE FALLS, RUFFIANS IN BEIJING?"
+  PBNews.7.t:0 "CHINESE EMPIRE FALLS"
   PBNews.7.d:0 "The Chinese Civil War has come to an end. Republican forces have soundly defeated the Qing Empire and successfully taken control of Beijing. The fall of the Manchu monarchy was predicted by many outside observers for nearly a decade since the end of the Great War. Even still, many are shocked to see the end of Imperial China.\n\nOne of the oldest and most ancient states in the world has been toppled by populist revolution, and the international community waits to see what will come of the new provisional government."
   PBNews.7.a:0 "The Future of China is uncertain."
 
-  PBNews.8.t:0 "GERMAN KAISER ABDICATES, DAUGHTER CROWNED"
+  PBNews.8.t:0 "GERMAN KAISER ABDICATES"
   PBNews.8.d:0 "The abdication of Kaiser Rudolf came as a shock to the people of Germany. Though many criticized the Kaiser's rule for his refusal to take a more prominent stance in politics, his status as the son of Franz Joseph earned him a begrudging respect.\n\nNow, his only daughter Archduchess Elisabeth Marie has succeeded him as the Kaiserin of Germany. Cornoated in a lavish ceremony in Frankfurt, the new Kaiserin has drawn some controversy from conservatives in the Empire for her open support of Stresemann's socialist government. "
   PBNews.8.a:0 "What does the future hold for Germany?"
 
-  PBNews.9.t:0 "GERMAN KAISER ABDICATES, FERDINAND CROWNED"
+  PBNews.9.t:0 "GERMAN KAISER ABDICATES"
   PBNews.9.d:0 "The abdication of Kaiser Rudolf came as a shock to the people of Germany. More surprising was the choice for his successor, Prince Georg of Bavaria. A devout Catholic and military figure, the Bavarian prince was an unlikely choice for the throne of the German state. For many, his accession indicates a noticeable shift in imperial power from Vienna to Munich.\n\nCoronated in a lavish ceremony in Frankfurt, the new Kaiser has quickly drawn the ire of the left-wing Bundestag for his more conservative leanings."
   PBNews.9.a:0 "What does the future hold for Germany?"
 
@@ -160,7 +160,7 @@
   PBNews.40.d:0 "Following the collapse of authority in South Africa, forces from German South West Africa intervened against the warring South African Republics and came out victorious. The so-called \"War of National Liberation\" has, ironically, ended with further subjugation of the Afrikaners. International observations on the event have been limited, with most attentions turned towards the rapidly collapsing Dutch Empire and France's European ascendance.\n\nFor now, true South African independence is a dream deferred, but for how long?."
   PBNews.40.a:0 "The Reich expands her reach further."
 
-  PBNews.41.t:0 "VOLKSTAAT DECLARED, NEIGHBORS CONCERNED"
+  PBNews.41.t:0 "VOLKSTAAT DECLARED"
   PBNews.41.d:0 "The South African Confederacy is no more, and arising from the remains is a state far worse. The moderate Afrikaner Republics have been snuffed out by the newly formed \"Volkstaat\", a hardline far-right state which now dominates the region. Based on principles of racial science and apartheid, this new state does not bode well for the majority native population, however their totalitarian nature has lead to considerable resistance from Afrikaner reformists.\n\nWhether this new state will continue to endure remains to be seen, but international opinion remains at best concerned."
   PBNews.41.a:0 "Troubling, to say the least."
 
@@ -224,7 +224,7 @@
   PBNews.56.d:0 "Previously informal rules of war have been completely shattered as the first nations deploy chemical weapons in the Second Great War. While the previous war saw such weapons used in a limited capacity, all bets are off now as both conventional and lethal chemical concotions are being used against soldiers.\n\nThe severity of these attacks is unimaginable, with international observers fearful that this development may set a precedent for the normalization of Chemical weaponry in war."
   PBNews.56.a:0 "War makes men go mad."
 
-  PBNews.57.t:0 "The Russian Colossus Surrenders"
+  PBNews.57.t:0 "RUSSIA SURRENDERS"
   PBNews.57.d:0 ""
   PBNews.57.a:0 "Death To The Tyrants!"
 
@@ -303,6 +303,10 @@
   PBNews.76.t:0 "THE DEAD MARCH WEST"
   PBNews.76.d:0 "Shocking revelations have come from the western hemisphere from the  Commonwealth of America that a large migration westwards has occurred as what seems to be a Revolutionary Great Trek. Reports say that many aspects of Jacobin loyalists and socialists have decided to join this 'Great march west' to establish what they call a progressive Utopia of America and to spread this continent across the continent. Ironically many subjects of the Commonwealth call this trek the 'Dead March West' due to the fact that many leftist marchers have been heckled and cut down from a lack of logistics, supplies and military incursions."
   PBNews.76.a:0 "Vae Victa"
+
+  PBNews.77.t:0 "FRANCE SURRENDERS"
+  PBNews.77.d:0 ""
+  PBNews.77.a:0 "My dear friends, this is your hour."
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
