--- a/localisation/PB_peace_popup_l_english.yml
+++ b/localisation/PB_peace_popup_l_english.yml
@@ -12,19 +12,13 @@
  PB_PEACE_POPUP_COUNTRY_PLURAL_HAS:0 " and their allies have "
  PB_PEACE_POPUP_COUNTRY_SINGULAR_HAS:0 " has "
 
- #TNO_PEACE_POPUP_WINNER_FACTION_LEADER:0 "[winning_country.GetFlag] §Y[winning_country.GetNameDef]§!"
- #TNO_PEACE_POPUP_WINNER_NOT_FACTION_LEADER:0 "As part of §Y[winning_country.GetFactionName]§!, [winning_country.GetFlag] §Y[winning_country.GetNameDef]§!, "
-#
- #TNO_PEACE_POPUP_LOSER_FACTION_LEADER:0 "[losing_country.GetFlag] §Y[losing_country.GetNameDef]§!"
- #TNO_PEACE_POPUP_LOSER_NOT_FACTION_LEADER:0 "[losing_country.GetFlag] §Y[losing_country.GetNameDef]§!, as part of §Y[losing_country.GetFactionName]§!,"
-
  #Peace event/war loc
  PB_PEACE_POPUP_WAR_CONCLUSION:0 "[GetWarConclusionLoc]"
  PB_PEACE_POPUP_WAR_CONTINUING:0 "[GetWarContinuationLoc]"
 
  #Wars that have finished
 
- PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA:0 "The §YMalayisan Insurgency§! has been crushed [winning_country.GetFlag] with the §Y[winning_country.GetNameDef]§![GetWinnerAllies] defeating the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]."
+ PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA_LOSS:0 "The §YMalayisan Insurgency§! has been crushed [winning_country.GetFlag] with the §Y[winning_country.GetNameDef]§![GetWinnerAllies] defeating the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]."
  PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA_VICTORY:0 "The §YMalayisan Insurgency§! has been victorious with the [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] defeating the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]."
  PB_PEACE_POPUP_WAR_CONCLUSION_ICA_LOSS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the[losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and restored order in the British Isles."
  PB_PEACE_POPUP_WAR_CONCLUSION_MON_LOSS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the[losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and established a loyal regime in the Eurasian steppes."
@@ -32,6 +26,8 @@
  PB_PEACE_POPUP_WAR_CONCLUSION_BRAZIL_WARS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the wars to reunify Brazil drag on."
  PB_PEACE_POPUP_WAR_CONCLUSION_ENG_LOSS:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have forced the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] to withdraw from Ireland, securing full Irish independence."
  PB_PEACE_POPUP_WAR_CONCLUSION_TCW:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Turkish Civil War continues."
+ PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_LEAGUE:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
+ PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_PACT:0 "The[winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
 
  #Capitulation (war continuing) events
 
@@ -62,7 +58,7 @@
  PB_PEACE_POPUP_FLAVOR_Hungary_GBW_Loss:0 "The first lesson a revolutionary must learn is that he is a doomed man"
  PB_PEACE_POPUP_FLAVOR_Serbia_GBW_Loss:0 "The dream of Yugoslavia dies, perhaps this time forever"
 
- PB_PEACE_POPUP_FLAVOR_ICA:0 "Back through the glen I rode again, my heart with grief was sore, for I parted with those valiant men that I'll never see more"
+ PB_PEACE_POPUP_FLAVOR_ICA:0 "Some day the sun will cease to shine, and I'll desert this lovely land of mine."
  PB_PEACE_POPUP_WAR_FLAVOR_ENG_ICA_CEASEFIRE:0 "Men perish but principles live"
 
  PB_PEACE_POPUP_FLAVOR_ROC_Revolution:0 "The Mandate of Heaven remains with the Emperor"
