--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1153,22 +1153,22 @@
  SER_Republic_cn_ADJ:0 "Serbian"
  SER_Republic_an_ADJ:0 "Serbian"
 
- HUN_Danube_PR_ni:0 "United Republics of the Danube"
- HUN_Danube_PR_ni_DEF:0 "United Republics of the Danube"
- HUN_Danube_PR_ds:0 "United Republics of the Danube"
- HUN_Danube_PR_ds_DEF:0 "United Republics of the Danube"
- HUN_Danube_PR_rc:0 "United Republics of the Danube"
- HUN_Danube_PR_rc_DEF:0 "United Republics of the Danube"
- HUN_Danube_PR_an:0 "United Republics of the Danube"
- HUN_Danube_PR_an_DEF:0 "United Republics of the Danube"
- HUN_Danube_PR_cn:0 "United Republics of the Danube"
- HUN_Danube_PR_cn_DEF:0 "United Republics of the Danube"
- HUN_Danube_PR_lb:0 "United Republics of the Danube"
- HUN_Danube_PR_lb_DEF:0 "United Republics of the Danube"
- HUN_Danube_PR_ss:0 "United Republics of the Danube"
- HUN_Danube_PR_ss_DEF:0 "United Republics of the Danube"
- HUN_Danube_PR_jc:0 "United Republics of the Danube"
- HUN_Danube_PR_jc_DEF:0 "United Republics of the Danube"
+ HUN_Danube_PR_ni:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_ni_DEF:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_ds:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_ds_DEF:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_rc:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_rc_DEF:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_an:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_an_DEF:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_cn:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_cn_DEF:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_lb:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_lb_DEF:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_ss:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_ss_DEF:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_jc:0 "Danubian Worker's and Peasant's Republic"
+ HUN_Danube_PR_jc_DEF:0 "Danubian Worker's and Peasant's Republic"
  HUN_Danube_PR_ni_ADJ:0 "Danubian"
  HUN_Danube_PR_rc_ADJ:0 "Danubian"
  HUN_Danube_PR_lb_ADJ:0 "Danubian"
@@ -1527,6 +1527,56 @@ FRA_LON_MANDATE_jc_ADJ:0 "French"
 FRA_LON_MANDATE_ds_ADJ:0 "French"
 FRA_LON_MANDATE_cn_ADJ:0 "French"
 FRA_LON_MANDATE_an_ADJ:0 "French"
+
+BRG_GER_OCC_ni:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_ni_DEF:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_ds:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_ds_DEF:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_rc:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_rc_DEF:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_an:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_an_DEF:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_cn:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_cn_DEF:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_lb:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_lb_DEF:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_ss:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_ss_DEF:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_jc:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_jc_DEF:0 "Imperial Commissariat of Burgundy"
+BRG_GER_OCC_ni_ADJ:0 "German-Burgundian"
+BRG_GER_OCC_rc_ADJ:0 "German-Burgundian"
+BRG_GER_OCC_lb_ADJ:0 "German-Burgundian"
+BRG_GER_OCC_ss_ADJ:0 "German-Burgundian"
+BRG_GER_OCC_jc_ADJ:0 "German-Burgundian"
+BRG_GER_OCC_ds_ADJ:0 "German-Burgundian"
+BRG_GER_OCC_cn_ADJ:0 "German-Burgundian"
+BRG_GER_OCC_an_ADJ:0 "German-Burgundian"
+
+FRA_Paris_Republic_ni:0 "Parisian Republic"
+FRA_Paris_Republic_ni_DEF:0 "Parisian Republic"
+FRA_Paris_Republic_ds:0 "Parisian Republic"
+FRA_Paris_Republic_ds_DEF:0 "Parisian Republic"
+FRA_Paris_Republic_rc:0 "Parisian Republic"
+FRA_Paris_Republic_rc_DEF:0 "Parisian Republic"
+FRA_Paris_Republic_an:0 "Parisian Republic"
+FRA_Paris_Republic_an_DEF:0 "Parisian Republic"
+FRA_Paris_Republic_cn:0 "Parisian Republic"
+FRA_Paris_Republic_cn_DEF:0 "Parisian Republic"
+FRA_Paris_Republic_lb:0 "Parisian Republic"
+FRA_Paris_Republic_lb_DEF:0 "Parisian Republic"
+FRA_Paris_Republic_ss:0 "Parisian Republic"
+FRA_Paris_Republic_ss_DEF:0 "Parisian Republic"
+FRA_Paris_Republic_jc:0 "Parisian Republic"
+FRA_Paris_Republic_jc_DEF:0 "Parisian Republic"
+FRA_Paris_Republic_ni_ADJ:0 "Parisian"
+FRA_Paris_Republic_rc_ADJ:0 "Parisian"
+FRA_Paris_Republic_lb_ADJ:0 "Parisian"
+FRA_Paris_Republic_ss_ADJ:0 "Parisian"
+FRA_Paris_Republic_jc_ADJ:0 "Parisian"
+FRA_Paris_Republic_ds_ADJ:0 "Parisian"
+FRA_Paris_Republic_cn_ADJ:0 "Parisian"
+FRA_Paris_Republic_an_ADJ:0 "Parisian"
 
 FRA_SP_Government_ni:0 "French Social Republic"
 FRA_SP_Government_ni_DEF:0 "French Social Republic"
