--- a/localisation/PB_War_Outcome_Events_l_english.yml
+++ b/localisation/PB_War_Outcome_Events_l_english.yml
@@ -15,3 +15,9 @@ waroutcome.3.a:0 "Excellent."
 waroutcome.4.t:0 "The Slovak Uprising is successful"
 waroutcome.4.d:0 ""
 waroutcome.4.a:0 "Excellent."
+
+waroutcome.5.t:0 "The Future of Europe - The French Problem"
+waroutcome.5.d:0 ""
+waroutcome.5.a:0 "France will be restored to pre-war borders"
+waroutcome.5.b:0 "France shall be partially dismantled"
+waroutcome.5.c:0 "Francia delenda est"
