--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -1,6 +1,5 @@
 ﻿l_english:
 
-
   ##########################
   # LEADERS
   ##########################
@@ -66,12 +65,12 @@
   AME_Test_SCA:0 "CLICK THIS TO PLAY AS THE SCA"
 
   PB_SCA_The_Final_Few:0 "The Dead March West"
-  PB_SCA_The_Final_Few_desc:0 "Our sons and daughters have made the impossible journey and whist our new home has just been settled the struggles have not yet ended. The roads are none existant, our homes mere huts, and our food reserves depleting by the second, and yet more come.\n\nEvery §Y30§! days more Butlerites will arrive. The intial waves will be large in number and will cause further strain towards our already ailing situation. Tough decisions will have to be made else we all starve to death.\n\n§RGod help us all.§!"
+  PB_SCA_The_Final_Few_desc:0 "\n\n\n\n\n\nOur sons and daughters have made the impossible journey and whist our new home has just been settled the struggles have not yet ended. The roads are none existant, our homes mere huts, and our food reserves depleting by the second, and yet more come.\n\nEvery §Y30§! days more Butlerites will arrive. The intial waves will be large in number and will cause further strain towards our already ailing situation. Tough decisions will have to be made else we all starve to death.\n\n§RGod help us all.§!"
   SCA_The_Final_Few:0 "The Final Few"
-  SCA_The_Final_Few_desc:0 "The dirt road that lead to this sanctuary is bruised with death and dreams. The dreams of a new age, an age of American equality, fairness, and most importantly, Jacobinism. And the death of thousands of mothers and fathers, sisters and brothers, family and friends, and followers of the revolution.\n\n§RThe roads are stained red with sacrifice.§!"
+  SCA_The_Final_Few_desc:0 "\n\n\n\n\n\nThe dirt road that lead to this sanctuary is bruised with death and dreams. The dreams of a new age, an age of American equality, fairness, and most importantly, Jacobinism. And the death of thousands of mothers and fathers, sisters and brothers, family and friends, and followers of the revolution.\n\n§RThe roads are stained red with sacrifice.§!"
   
   PB_SCA_The_Northern_Menace:0 "The Northern Menace"
-  PB_SCA_The_Northern_Menace_desc:0 "The Native raids we are experiencing cannot go unpunished. Innocents die left and right whilst our stockpiles are left barren with food and materials. We must mount an offensive to rid the northern tribes of their rule else we face extinction. Thise will be no easy feat and all will have to do their part for the betterment of the revolution."
+  PB_SCA_The_Northern_Menace_desc:0 "\n\n\n\n\n\nThe Native raids we are experiencing cannot go unpunished. Innocents die left and right whilst our stockpiles are left barren with food and materials. We must mount an offensive to rid the northern tribes of their rule else we face extinction. Thise will be no easy feat and all will have to do their part for the betterment of the revolution."
   SCA_The_Crow_Offensive:0 "The Crow Offensive"
   SCA_The_Crow_Offensive_desc:0 "The first struggle that will test the foundations of our nation and the very bedrock we lay ourselves upon comes once again in the form of war. We are no tyrants, imperialists, or mad men but push come to shove and we will seek revenge. For that is the natural order of life."
   SCA_Emergency_Draft:0 "Emergency Draft"
@@ -117,7 +116,7 @@
   Highway_Expansion_In_Assinibone:0 "Highway Expansion In Assinibone"
 
   PB_SCA_Prepare_For_War:0 "Invasion Preparations"
-  PB_SCA_Prepare_For_War_desc:0 "The vial pigs in California parade around with red banners and revolutionary zeal. A clear showing of their incompetence and stupidity. They are fools! Liars! And most disturbingly traitors to the true revolution! They are but a simple bump in our path to the Commonwealth, to our home. Their fate will be bloody and merciless.\n\nYour §OPreparedness§! for war with California is at §Y[?SCA_Prep_Cal]%§!\n\nOnce your §OPreparedness§! has reached §Y100%§! the "All Is Set" Focus will unlock."
+  PB_SCA_Prepare_For_War_desc:0 "\n\n\n\n\n\nThe vial pigs in California parade around with red banners and revolutionary zeal. A clear showing of their incompetence and stupidity. They are fools! Liars! And most disturbingly traitors to the true revolution! They are but a simple bump in our path to the Commonwealth, to our home. Their fate will be bloody and merciless.\n\nYour §OPreparedness§! for war with California is at §Y[?SCA_Prep_Cal]%§!\n\nOnce your §OPreparedness§! has reached §Y100%§! the "All Is Set" Focus will unlock."
   SCA_Fund_Californian_Insurgents:0 "Fund Californian Insurgents"
   SCA_Begin_An_Ace_Initiative:0 "Begin An Ace Initiative"
   SCA_Officialise_A_Friendship_Pact_With_Mexico:0 "Officialise A Friendship Pact With Mexico"
