--- a/localisation/PB_Parties_l_english.yml
+++ b/localisation/PB_Parties_l_english.yml
@@ -421,21 +421,21 @@
   ISR_ni_party_long:0 "The Nay Party"
 
   PRS_jc_party:0 "Various Partisans"
-  PRS_jc_party_long:0 "Various Partisans"
+  PRS_jc_party_long:0 "Various Partisans\n\n§gThis party holds no official power. It is considered a possible party option by other nations though does not exist or operate in the eyes of the Vaterland Front.§!\n"
   PRS_ss_party:0 "GVP"
-  PRS_ss_party_long:0 "Gewerkschaftskongress von Preußen"
+  PRS_ss_party_long:0 "Gewerkschaftskongress von Preußen\n\n§gThis party holds no official power. It is considered a possible party option by other nations though does not exist or operate in the eyes of the Vaterland Front.§!\n"
   PRS_lb_party:0 "ULP"
-  PRS_lb_party_long:0 "Unabhängige Liberale Partei"
+  PRS_lb_party_long:0 "Unabhängige Liberale Partei\n\n§gThis party holds no official power. It is considered a possible party option by other nations though does not exist or operate in the eyes of the Vaterland Front.§!\n"
   PRS_cn_party:0 "VP"
-  PRS_cn_party_long:0 "Vaterlandspartei"
+  PRS_cn_party_long:0 "Vaterlandspartei\n\n§gThis party holds no official power. It is considered a possible party option by other nations though does not exist or operate in the eyes of the Vaterland Front.§!\n"
   PRS_an_party:0 "Junker Interests"
-  PRS_an_party_long:0 "Junker Interests"
+  PRS_an_party_long:0 "Junker Interests\n\n§gRepresenting the interests of the Junkers, or what is left of them as well as any surving industrialists. This party while still functioning in some official capacity has been largely disolved, integrating into the Vaterland Front. Many of the final supporters of the old democratic regime reside in this party and it is looking like the final holdouts of individuals are going to be silenced for good in the coming months. Ironically many of the Vaterland members came from this exact party, including Bouhler himself. The party values include, market freedom, limited government interventionism, and corporate representation. Effectively making the state be run by those with the deepest pockets.§!\n"
   PRS_rc_party:0 "VF - Moderates"
-  PRS_rc_party_long:0 "Vaterlandsfront - Moderate Faction"
+  PRS_rc_party_long:0 "Vaterlandsfront - Moderate Faction\n\n§gCreated shortly after the Prussian civil war in 1921, the party places a heavy focus on traditional conservative values. Following in the footsteps of the old Prussian nation the party also emphasizes the importance of the military, all aspects of life being in some way connected to the so called 'martial lifestyle'. Children are put into youth programs, women play the role of the carer, and men are either employed into laborious jobs or directly serve the state through military positions. The Moderate Faction is comprised of ultra-conservative politicians and figures, some military figures are also 'employed' into this sub-party. They represent the least radical of the Vaterland party and is usually just comprised of far-right reactionaries, instead of being Neo-Imperialists.§!\n"
   PRS_ds_party:0 "Vaterlandsfront - Militarists"
-  PRS_ds_party_long:0 "Vaterlandsfront - Militarist Faction"
+  PRS_ds_party_long:0 "Vaterlandsfront - Militarist Faction\n\n§gCreated shortly after the Prussian civil war in 1921, the party places a heavy focus on traditional conservative values. Following in the footsteps of the old Prussian nation the party also emphasizes the importance of the military, all aspects of life being in some way connected to the so called 'martial lifestyle'. Children are put into youth programs, women play the role of the carer, and men are either employed into laborious jobs or directly serve the state through military positions. The Militarist Faction represent the interests of the highest ranking military figures of the Vaterland Front, while still radical their form of radicalism is quite tempered when compared to the official ruling party.§!\n"
   PRS_ni_party:0 "Vaterlandsfront - Prussonationalists"
-  PRS_ni_party_long:0 "Vaterlandsfront - Prussonationalist Faction"
+  PRS_ni_party_long:0 "Vaterlandsfront - Prussonationalist Faction\n\n§gCreated shortly after the Prussian civil war in 1921, the party places a heavy focus on traditional conservative values. Following in the footsteps of the old Prussian nation the party also emphasizes the importance of the military, all aspects of life being in some way connected to the so called 'martial lifestyle'. Children are put into youth programs, women play the role of the carer, and men are either employed into laborious jobs or directly serve the state through military positions. The main portion of the party, the Vaterland Front, are considered fairly radical, even but far-right standards. The most radcial being of Schmidt's clique.§!\n"
 
   LAK_jc_party:0 "Choctaw Tribe"
   LAK_jc_party_long:0 "Choctaw Tribe"
