More Random Stuff

--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -182,7 +182,7 @@
   PB_PRS_Plan_Eden_desc:0 "\n\n\n\n\n\nOur industry is severly lacking in many departments. A nation wide effort will be established to accelerate the growth of the Prussian economy and hopefully assert ourselves as the economic masters of the baltic seas. And Europe to, if possible."
 
   PB_PRS_Volker_werden:0 "Völker Werden"
-  PB_PRS_Volker_werden_desc:0 "\n\n\n\n\n\nThe "Peoples Will" will be a loose collection of Prussia's population that is unfit to serve due to health or political beliefs. None shall waste valuable time and resources whilst the rest of the nation toils away. Everyone that can pull a trigger will serve no questions asked.\n\n§YThese decisions will be able every two years after completion§!"
+  PB_PRS_Volker_werden_desc:0 "\n\n\n\n\n\nThe "Peoples Will" will be a loose collection of Prussia's population that is unfit to serve due to health or political beliefs. None shall waste valuable time and resources whilst the rest of the nation toils away. Everyone that can pull a trigger will serve no questions asked."
 
   PB_PRS_Fredrick_Class_Battleship_Development:0 "Fredrick Class Battleship Development"
 
