--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -169,9 +169,13 @@
   PB_ENG_National_Security_Act_desc:0 "The NPP have brought peace, freedom, justice, and security to the United Kingdom and all of her mandates. To fully make sure of this we shall create the National Security Act which will give the Prime Minister powers to bypass parliament in emergency times' all for good measure of course. God save Britannia."
 
   PB_ENG_1937_Elections:0 "The 1937 Election"
+  PB_ENG_1937_Elections_desc:0 " The Time has come; the 1937 election is finally here and with dark clouds on the Horizon this may be the election which decides Britannia's soul for the better or the worse we shall see if the electorate shall decide to keep their current masters or replace them with a new political premiership."
   PB_ENG_1937_Elections_WUP:0 "Keeping the Red Flag Flying Here"
+  PB_ENG_1937_Elections_WUP_desc:0 " Then raise the scarlet standard high. Beneath its folds we'll live and die. Though cowards flinch and traitors sneer. We'll keep the red flag flying here"
   PB_ENG_1937_Elections_WUP_Moderate:0 "The Attlee Ministry"
+  PB_ENG_1937_Elections_WUP_Moderate_desc:0 "The British People have decided to vote WUP in the 1937 with Attlee in command of this new nation. With the coming Challenges ahead we shall see if Major Attlee shall keep his new 1937 promises whilst keeping at bay both foreign, domestic and party threats for the Good of the British public."
   PB_ENG_1937_Elections_WUP_Radical:0 "Taking the White Gloves Off"
+  PB_ENG_1937_Elections_WUP_Radical_desc:0 "Now that the WUP have won the 1937 and with coming troubles across the Channel we can stop fannying around to satiate tradition in this country. It is time to take off the Gloves in the name of the British Worker and to destroy this captialist rot on this workman's nation."
   PB_ENG_1937_Rapid_Remilitarization:0 "Rapid Remilitarization"
   PB_ENG_1937_National_Development_Board:0 "National Development Committee"
   PB_ENG_1937_War_Powers_Act:0 "The War Powers Act"
