--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -56,6 +56,8 @@
   PB_SCA_A_Red_Navy_2:0 "A Red Navy"
 
   PB_SCA_Naval_Build_Up:0 "Naval Build Up"
+  
+  PB_Survival_First_Morals_Second:0 "Survival First Morals Second"
 
   ##########################
   # DECISIONS/MISSIONS/DEBUG
@@ -157,6 +159,8 @@
   SCA_With_Open_Eyes_desc:0 "Like prey hiding from an Eagle on the hunt any sudden movement could give our vulnerable position away. We must take great precautions in the way we conduct our struggling nation else we meet the mouth of the predator."
   SCA_Hide_From_The_Giant:0 "Hide From The Giant"
   SCA_Hide_From_The_Giant_desc:0 "Everyday those damn patrols get closer and closer to our homes. If we plan on surviving this shit storm then we best cover our tracks, not doing so will lead to our demise, it is an unfortunate truth we have to live with, §Rfor now.§!"
+  SCA_Hide_From_The_Giant_2:0 "Hide From The Giant"
+  SCA_Hide_From_The_Giant_2_desc:0 "Everyday those damn patrols get closer and closer to our homes. If we plan on surviving this shit storm then we best cover our tracks, not doing so will lead to our demise, it is an unfortunate truth we have to live with, §Rfor now.§!"
   SCA_Buy_Time:0 "Buy Time"
   SCA_Buy_Time_desc:0 "The UC have come too close to our borders and sightings have become the regular.\n\n§RWE MUST ACT NOW ELSE WE DIE IN THIS FUCKING DESERT!§!"
   decision_cost_5_stability:0 "£stability_texticon  §Y5§!"
@@ -593,6 +597,30 @@
 
   SCA_A_Friend_Across_The_Pacific:0 "A Friend Across The Pacific"
   SCA_A_Friend_Across_The_Pacific_desc:0 ""
+  
+  SCA_In_The_Belly_Of_The_Beast:0 "In The Belly Of The Beast"
+
+  SCA_Peoples_Committee_Of_Internal_Affairs:0 "People's Committee Of Internal Affairs"
+
+  SCA_Release_The_Midnight_Clean_Up_Crews:0 "Release The Midnight Clean Up Crews"
+
+  SCA_Hush_Campaigns:0 "Hush Campaigns"
+
+  SCA_Plant_Fake_Evidence:0 "Plant Fake Evidence"
+
+  SCA_False_Roads:0 "False Roads"
+
+  SCA_Go_Home_GI:0 "Go Home G.I."
+
+  SCA_Expand_Recon_Networks:0 "Expand Recon Networks"
+
+  SCA_Bait_And_Trap:0 "Bait And Trap"
+
+  SCA_Terror_Attacks:0 "Terror Attacks"
+
+  SCA_Recruit_A_Few_Kill_The_Rest:0 "Recruit A Few Kill The Rest"
+
+  SCA_Safe_And_Sound:0 "Safe And Sound"
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
@@ -627,6 +655,13 @@
   SCA27tooltip:0 "Six §YJapanese§! Destroyers will be §GDonated§! to us from the port in Tokyo.\n\nThe Ships will be renamed to:\n§YSSS§! Liberty\n§YSSS§! Freedom\n§YSSS§! Justice\n§YSSS§! Butler\n§YSSS§! Columbia\n§YSSS§! Revenge"
   SCA28tooltip:0 "The '§YWith Open Eyes§!' Misson Timer Will Be Reset"
   SCA29tooltip:0 "§RTHIS WILL LEAD TO WAR!§!"
+  SCA30tooltip:0 "Every §YUnit Leader§! Will Gain One Skill Level"   
+  SCA31tooltip:0 "Every §YUnit Leader§! Will Gain Two Defence Skill Levels"
+  SCA32tooltip:0 "The §YPeople's Committee Of Internal Affairs§! Will Be Unlocked As An Intelligance Agency" 
+  SCA33tooltip:0 "\n§gThis National Spirit will be removed after we liberate California§!" 
+  SCA34tooltip:0 "The §YWith Open Eyes§! Mission Will Be Reset For Free" 
+  SCA35tooltip:0 "Two §YAmerican Garrisons§! In §YAiouez§! Will Defect To The Cause. §RThose That Refuse Will Be Shot§!"
+  SCA36tooltip:0 "The §YHide From The Giant§! Decision Will Now Cost The Total Number Of Divisions Instead Of Battalions. You Can Now Field A §GLarger Army§! As A Result\n\n" 
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
   SCA_LAK_WAR_OVER:0 "The Northern Threat Has Been Dealt With"
