--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -72,7 +72,7 @@
   SCA_The_Final_Few_desc:0 "The dirt road that lead to this sanctuary is bruised with death and dreams. The dreams of a new age, an age of American equality, fairness, and most importantly, Jacobinism. And the death of thousands of mothers and fathers, sisters and brothers, family and friends, and followers of the revolution.\n\n§RThe roads are stained red with sacrifice.§!"
   
   PB_SCA_The_Northern_Menace:0 "The Northern Menace"
-  PB_SCA_The_Northern_Menace_desc:0 "\n\n\n\n\n\nThe Native raids we are experiencing cannot go unpunished. Innocents die left and right whilst our stockpiles are left barren with food and materials. We must mount an offensive to rid the northern tribes of their rule else we face extinction. Thise will be no easy feat and all will have to do their part for the betterment of the revolution."
+  PB_SCA_The_Northern_Menace_desc:0 "\n\n\n\n\n\nThe Native raids we are experiencing cannot go unpunished. Innocents die left and right whilst our stockpiles are left barren with food and materials. We must mount an offensive to rid the northern tribes of their rule else we face extinction. This will be no easy feat and all will have to do their part for the betterment of the revolution."
   SCA_The_Crow_Offensive:0 "The Crow Offensive"
   SCA_The_Crow_Offensive_desc:0 "The first struggle that will test the foundations of our nation and the very bedrock we lay ourselves upon comes once again in the form of war. We are no tyrants, imperialists, or mad men but push come to shove and we will seek revenge. For that is the natural order of life."
   SCA_Emergency_Draft:0 "Emergency Draft"
@@ -662,6 +662,7 @@
   SCA34tooltip:0 "The §YWith Open Eyes§! Mission Will Be Reset For Free" 
   SCA35tooltip:0 "Two §YAmerican Garrisons§! In §YAiouez§! Will Defect To The Cause. §RThose That Refuse Will Be Shot§!"
   SCA36tooltip:0 "The §YHide From The Giant§! Decision Will Now Cost The Total Number Of Divisions Instead Of Battalions. You Can Now Field A §GLarger Army§! As A Result\n\n" 
+  SCA37tooltip:0 "The Following States, If Owned By The §RUnited Commonwealth§!, Will Get The §YSabatoged Resources§! State Modifier. They Will Also Loose Some Manpower. They Are:\n\nCheyenne\nKkaze\nPawnee\nOglala\nYanktonai\nAiouez\n" 
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
   SCA_LAK_WAR_OVER:0 "The Northern Threat Has Been Dealt With"
