--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -315,6 +315,14 @@
   PBNews.78.t:0 "PRUSSIAN SUPER-BATTLESHIP"
   PBNews.78.d:0 ""
   PBNews.78.a:0 "Concerning"
+  
+  PBNews.79.t:0 "JACOBIN INCURSION INTO CALIFORNIA"
+  PBNews.79.d:0 ""
+  PBNews.79.a:0 "This Can't Be Good"
+
+  PBNews.80.t:0 "FALL OF CALIFORNIA"
+  PBNews.80.d:0 ""
+  PBNews.80.a:0 "An New Contender Arises"
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
