--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -59,6 +59,8 @@
   
   PB_Survival_First_Morals_Second:0 "Survival First Morals Second"
 
+  PB_Administrative_Issues:0 "Administrative Issues"
+
   ##########################
   # DECISIONS/MISSIONS/DEBUG
   ##########################
@@ -157,7 +159,9 @@
   PB_SCA_The_Sleeping_Giant_desc:0 "\n\n\n\n\n\nThough we have exiled ourselves to the middle of buttfuck nowhere the §YUnited Commonwealth§! casts a poisoned shadow over our people, and our states very existence. They know we left, and we settled ourselves for a new life, but if they find even our general whereabouts then our very survival is at stake. It is therefore necessary that we keep our presence unknown until we are ready to strike first or until we at the very least reach an acceptable level of readiness.\n\nThe cost of the '§YHide From The Giant§!' decision equates to how many battalions you have mobolized, i.e. nine battalions = nine political power, this is related to battalions, §RNOT DIVISIONS§!. If The UC discovers us an event will fire in approx. four days at which point war will follow. This basically means death. It is §RHIGHLY§! reccommended that you do not spam out divisions willy-nilly. Once you have formed the Pacific Union this mechanic will come to an end since your existence and whereabouts will be made very clear to the UC at that point.\n\n§RGod help us all if they discover our sanctuary, our home.§!"
   SCA_With_Open_Eyes:0 "With Open Eyes"
   SCA_With_Open_Eyes_desc:0 "Like prey hiding from an Eagle on the hunt any sudden movement could give our vulnerable position away. We must take great precautions in the way we conduct our struggling nation else we meet the mouth of the predator."
-  SCA_Hide_From_The_Giant:0 "Hide From The Giant"
+  SCA_With_Open_Eyes_2:0 "With Open Eyes"
+  SCA_With_Open_Eyes_2_desc:0 "Like prey hiding from an Eagle on the hunt any sudden movement could give our vulnerable position away. We must take great precautions in the way we conduct our struggling nation else we meet the mouth of the predator."
+  SCA_Hide_From_The_Giant:0 "With Open Eyes"
   SCA_Hide_From_The_Giant_desc:0 "Everyday those damn patrols get closer and closer to our homes. If we plan on surviving this shit storm then we best cover our tracks, not doing so will lead to our demise, it is an unfortunate truth we have to live with, §Rfor now.§!"
   SCA_Hide_From_The_Giant_2:0 "Hide From The Giant"
   SCA_Hide_From_The_Giant_2_desc:0 "Everyday those damn patrols get closer and closer to our homes. If we plan on surviving this shit storm then we best cover our tracks, not doing so will lead to our demise, it is an unfortunate truth we have to live with, §Rfor now.§!"
@@ -647,7 +651,7 @@
   SCA19tooltip:0 "\nYour §OPreparedness§! for war with California is at §Y[?SCA_Prep_Cal]%§!\n\nOnce your §OPreparedness§! has reached §Y100%§! or higher the "All Is Set" Focus will unlock."
   SCA20tooltip:0 "Your §OPreparedness§! is at §G100%§! or higher" 
   SCA21tooltip:0 "Your §OPreparedness§! will increase by §Y10%§!"
-  SCA22tooltip:0 "The §YMid-Western Union§! has liberated California and now must set off to avenge those who they lost so long ago\n\nYou will now have the ability to wage §YWar§! against the §RCommonwealth§!"
+  SCA22tooltip:0 "The §YMid-Western Union§! has liberated California and now must set off to avenge those who they lost so long ago\n\nYou will now have the ability to wage §YWar§! against the §RCommonwealth§!\n\nAll Californian states under our control will become cores. This will cause §Radministrative issues§!\n\n"
   SCA23tooltip:0 "Our hardest days are over but the stuggle has yet to end."
   SCA24tooltip:0 "You will be locked out of destabilizing another city until this decision times out"
   SCA25tooltip:0 "\nWith these decisions you will be able to §Rdestabilize§! the Commonwealth until our eventual showdown"
@@ -663,6 +667,8 @@
   SCA35tooltip:0 "Two §YAmerican Garrisons§! In §YAiouez§! Will Defect To The Cause. §RThose That Refuse Will Be Shot§!"
   SCA36tooltip:0 "The §YHide From The Giant§! Decision Will Now Cost The Total Number Of Divisions Instead Of Battalions. You Can Now Field A §GLarger Army§! As A Result\n\n" 
   SCA37tooltip:0 "The Following States, If Owned By The §RUnited Commonwealth§!, Will Get The §YSabatoged Resources§! State Modifier. They Will Also Loose Some Manpower. They Are:\n\nCheyenne\nKkaze\nPawnee\nOglala\nYanktonai\nAiouez\n" 
+  SCA38tooltip:0 "The §YWith Open Eyes§! Mission Timer Will Now Take §O130§! Days Instead Of §O100§!. This will also reset the mission timer" 
+  SCA39tooltip:0 "Every §YUnit Leader§! Will Gain One Planning Skill Level"
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
   SCA_LAK_WAR_OVER:0 "The Northern Threat Has Been Dealt With"
@@ -811,6 +817,11 @@
   SCA32title:0 "Reports From Mitsi Adazi"
   SCA32desc:0 "" 
   SCA32opta:0 "Kill Them Once And For All"
+  SCA33title:0 "A New Capital?"
+  SCA33desc:0 "" 
+  SCA33opta:0 "San Francisco Looks Nice This Time Of The Year"
+  SCA33optb:0 "A New Life In Los Angeles"
+  SCA33optc:0 "Mitsi Adazi Is Our Home"
 
 
 
